<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<!--PRIMER TextView para el título Conoce tu CURP-->
 <TextView
     android:id="@+id/titulo"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="21dp"
     android:text="@string/textview_titulo"
     android:textColor="#000000"
     android:textSize="25sp" />

 <TextView
     android:id="@+id/nombre"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignParentStart="true"
     android:layout_alignParentTop="true"
     android:layout_marginStart="69dp"
     android:layout_marginTop="85dp"
     android:text="@string/textview_nombre"
     android:textColor="#000000" />

     <EditText
         android:id="@+id/ET_nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/nombre"
         android:layout_alignParentStart="true"
         android:layout_marginStart="146dp"
         android:ems="10"
         android:hint="Ej. Yesica Lizeth"
         android:inputType="textPersonName"/>

 <!--TextView para mostrar el titulo de Apellido Pateno -->

  <TextView
     android:id="@+id/apellidopaterno"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignEnd="@+id/nombre"
     android:layout_alignParentTop="true"
     android:layout_marginTop="125dp"
     android:text="@string/textview_apellidopaterno"
     android:textColor="#000000" />


    <EditText
        android:id="@+id/ET_apellidopaterno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/apellidopaterno"
        android:layout_alignParentStart="true"
        android:layout_marginStart="146dp"
        android:ems="10"
        android:hint="Ej. Aldape"
        android:inputType="textPersonName"/>

 <!--TextView para mostrar el titulo de Apellido Materno -->

 <TextView
     android:id="@+id/apellidomaterno"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_alignEnd="@+id/nombre"
     android:layout_alignParentTop="true"
     android:layout_marginTop="165dp"
     android:text="@string/textview_apellidomaterno"
     android:textColor="#000000" />


     <EditText
         android:id="@+id/ET_apellidoMaterno"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/apellidomaterno"
         android:layout_alignParentStart="true"
         android:layout_marginStart="146dp"
         android:ems="10"
         android:hint="Ej. García"
         android:inputType="textPersonName"/>


<!--RADIO BUTTON para establecer el Genero del usuario-->

    <TextView
        android:id="@+id/genero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nombre"
        android:layout_alignParentTop="true"
        android:layout_marginTop="235dp"
        android:text="@string/textview_genero"
        android:textColor="#000000" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/ET_nombre"
        android:layout_marginTop="216dp">

        <RadioButton
            android:id="@+id/generoFemenino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/ET_nombre"
            android:text="@string/textview_femenino" />

        <RadioButton
            android:id="@+id/generoMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ET_nombre"
            android:layout_below="@+id/generoFemenino"
            android:text="@string/textview_masculino" />

    </RadioGroup>
<!--Poner la fecha de nacimiento -->

    <TextView
        android:id="@+id/Fechanacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="238dp"
        android:text="@string/textview_fechanacimiento"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/ET_fechanacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/Fechanacimiento"
        android:layout_alignParentStart="true"
        android:layout_marginStart="146dp"
        android:ems="10"
        android:inputType="date" />

<!--Establecer la entidad federativo-->
    <TextView
        android:id="@+id/entidadFederativa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/nombre"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="172dp"
        android:text="@string/textview_entidadfederativa"
        android:textColor="#000000" />

   <EditText
       android:id="@+id/ET_entidadFederativa"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignBaseline="@+id/entidadFederativa"
       android:layout_alignParentStart="true"
       android:layout_marginStart="146dp"
       android:ems="10"
       android:hint="Ej. Nuevo León"
       android:inputType="text"/>

<!--BOTON PARA CALCULAR-->

    <Button
        android:id="@+id/botonCalcular"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="@string/button_calcular" />


</RelativeLayout>
